--- a/packages/core/src/components/datetime-picker/datetime-picker.scss
+++ b/packages/core/src/components/datetime-picker/datetime-picker.scss
@@ -19,10 +19,18 @@
 
 .flex {
   display: flex;
+  justify-content: center;
 }
 
 .done {
   display: flex;
   justify-content: flex-end;
   margin: 0 $default-space $default-space 0;
+}
+
+.separator {
+  border: 1px solid var(--theme-datepicker-separator--background);
+  width: 100%;
+  margin-top: 72px;
+  height: 1px;
 }
