--- a/packages/core/src/components/date-time-card/date-time-card.scss
+++ b/packages/core/src/components/date-time-card/date-time-card.scss
@@ -17,9 +17,9 @@
   border-radius: unset;
 
   &.individual {
-    box-shadow: 0 0 2px 0 var(--theme-input--border-color-bottom--disabled),
-      0 4px 8px 0 var(--theme-input--border-color-bottom--disabled),
-      0 12px 18px 0px var(--theme-input--border-color-bottom--disabled);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 0, 0.1),
+      0 4px 8px 0 rgba(0, 0, 0, 0.1),
+      0 12px 18px 0px rgba(0, 0, 0, 0.1);
     border: 1px solid var(--theme-menu--border-color);
     border-radius: 4px;
   }
