--- a/packages/angular-test-app/src/styles.scss
+++ b/packages/angular-test-app/src/styles.scss
@@ -12,11 +12,6 @@
 @import 'ag-grid-community/styles/ag-grid.css';
 @import 'ag-grid-community/styles/ag-theme-alpine.css';
 
-// Relative import only for monorepo with symlinking normal import should be @siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css
-@import './../../../node_modules/@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
-
-// Relative import only for monorepo with symlinking normal import should be @siemens/ix/dist/siemens-ix/siemens-ix.css
-@import './../../../node_modules/@siemens/ix/dist/siemens-ix/siemens-ix.css';
-
-// Relative import only for monorepo with symlinking normal import should be @siemens/ix-icons/dist/css/ix-icons.css
-@import './../../../node_modules/@siemens/ix-icons/dist/css/ix-icons.css';
+@import '@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
+@import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
+@import '@siemens/ix-icons/dist/css/ix-icons.css';
