--- a/packages/core/src/components/datetime-picker/test/basic/index.html
+++ b/packages/core/src/components/datetime-picker/test/basic/index.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-datetime-picker></ix-datetime-picker>
+      <ix-datetime-picker year="2020" month="1" day="20"></ix-datetime-picker>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
