--- a/packages/core/src/components/select/select.scss
+++ b/packages/core/src/components/select/select.scss
@@ -24,8 +24,7 @@
     align-items: center;
     height: auto;
     background-color: var(--theme-input--background);
-    border: var(--theme-input--border-thickness) solid
-      var(--theme-input--border-color);
+    border: var(--theme-input--border-thickness) solid var(--theme-input--border-color);
     border-radius: var(--theme-input--border-radius);
     padding: 0 0 0 $small-space;
 
@@ -71,7 +70,7 @@
 
       margin: auto;
 
-      > ix-filter-chip {
+      >ix-filter-chip {
         margin: 0.1rem;
       }
     }
@@ -86,7 +85,7 @@
 
       &,
       &:hover,
-      &:focus {
+      &:focus-visible {
         border: none;
         outline: none;
       }
@@ -113,15 +112,11 @@
   .editable {
     .chevron-down-container {
       @include hover {
-        background-color: var(
-          --theme-btn-invisible-secondary--background--hover
-        );
+        background-color: var(--theme-btn-invisible-secondary--background--hover);
       }
 
       @include active {
-        background-color: var(
-          --theme-btn-invisible-secondary--background--active
-        );
+        background-color: var(--theme-btn-invisible-secondary--background--active);
       }
     }
   }
