--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -31,13 +31,16 @@
     font-weight: $font-weight-normal;
   }
 
-  &:focus,
+  &:focus-visible,
   &.focus {
     box-shadow: none;
   }
 }
 
-$button-categories: (primary, secondary);
+$button-categories: (
+  primary,
+  secondary
+);
 
 @mixin btn($name, $enable-border: true) {
   .btn-#{$name} {
@@ -47,7 +50,6 @@ $button-categories: (primary, secondary);
 
     &,
     &.focus,
-    &:focus,
     &:focus-visible {
       background-color: var(--theme-btn-#{$name}--background);
       color: var(--theme-btn-#{$name}--color);
@@ -73,11 +75,13 @@ $button-categories: (primary, secondary);
       @if $enable-border {
         border-color: var(--theme-btn-#{$name}--border-color--hover) !important;
       }
+
       background-color: var(--theme-btn-#{$name}--background--hover) !important;
       color: var(--theme-btn-#{$name}--color--hover) !important;
     }
 
     &.selected {
+
       &.hover,
       &:hover {
         background-color: var(--theme-btn-#{$name}--background--selected-hover);
@@ -87,18 +91,20 @@ $button-categories: (primary, secondary);
 
     &:not(:disabled):not(.disabled):active,
     &:not(:disabled):not(.disabled).active,
-    .show > &.dropdown-toggle {
+    .show>&.dropdown-toggle {
       @if $enable-border {
         border-color: var(--theme-btn-#{$name}--border-color--active) !important;
       }
+
       background-color: var(--theme-btn-#{$name}--background--active) !important;
       color: var(--theme-btn-#{$name}--color--active) !important;
     }
 
     &.selected {
+
       &:not(:disabled):not(.disabled):active,
       &:not(:disabled):not(.disabled).active,
-      .show > &.dropdown-toggle {
+      .show>&.dropdown-toggle {
         background-color: var(--theme-btn-#{$name}--background--selected-active);
         color: var(--theme-btn-#{$name}--color--selected-active);
       }
@@ -107,9 +113,11 @@ $button-categories: (primary, secondary);
     &.disabled,
     &:disabled {
       cursor: initial;
+
       @if $enable-border {
         border-color: var(--theme-btn-#{$name}--border-color--disabled);
       }
+
       background-color: var(--theme-btn-#{$name}--background--disabled);
       color: var(--theme-btn-#{$name}--color--disabled);
       opacity: 1;
@@ -127,6 +135,7 @@ $button-categories: (primary, secondary);
 .btn-icon {
   min-width: $x-large-space;
   width: $x-large-space;
+
   .glyph {
     margin-right: 0;
   }
