--- a/packages/core/src/components/category-filter/category-filter.scss
+++ b/packages/core/src/components/category-filter/category-filter.scss
@@ -56,7 +56,7 @@
 
     &,
     &:hover,
-    &:focus {
+    &:focus-visible {
       border: none;
       outline: none;
     }
@@ -139,7 +139,7 @@
       outline: none;
     }
 
-    .plain-text-suggestion  {
+    .plain-text-suggestion {
       border-radius: $default-space;
     }
   }
@@ -148,7 +148,7 @@
     height: 100%;
   }
 
-  ul > li,
+  ul>li,
   input {
     padding-top: 2px;
     padding-bottom: 2px;
