--- a/packages/core/src/components/filter-chip/filter-chip.scss
+++ b/packages/core/src/components/filter-chip/filter-chip.scss
@@ -30,7 +30,7 @@
     background-color: var(--theme-chip--background--active);
   }
 
-  @include focus {
+  @include focus-visible {
     border-color: #199fff;
   }
 
@@ -50,7 +50,7 @@
     padding: 0;
     vertical-align: top;
 
-    @include focus {
+    @include focus-visible {
       outline: none;
       border-color: #199fff;
     }
