fix(core/expanding-seach): change to a inline style

--- a/packages/core/src/components/expanding-search/expanding-search.scss
+++ b/packages/core/src/components/expanding-search/expanding-search.scss
@@ -14,7 +14,7 @@
 $container-width: 11.5625rem;
 
 :host {
-  display: flex;
+  display: inline-flex;
   width: auto;
   height: $x-large-space;
   align-items: center;
