--- a/packages/core/src/components/expanding-search/test/basic/index.html
+++ b/packages/core/src/components/expanding-search/test/basic/index.html
@@ -13,8 +13,10 @@ SPDX-License-Identifier: MIT
     />
     <title>Stencil Component Starter</title>
   </head>
-  <body style="margin: 2rem">
+  <body style="display: flex; width: 100%; margin: 2rem">
+    <ix-button style="margin-right: 1rem">BEFORE</ix-button>
     <ix-expanding-search placeholder="Search..."></ix-expanding-search>
+    <ix-button style="margin-left: 1rem">AFTER</ix-button>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
