--- a/packages/angular-test-app/src/styles.scss
+++ b/packages/angular-test-app/src/styles.scss
@@ -15,3 +15,8 @@
 @import '@siemens/ix-aggrid/dist/ix-aggrid/ix-aggrid.css';
 @import '@siemens/ix/dist/siemens-ix/siemens-ix.css';
 @import '@siemens/ix-icons/dist/css/ix-icons.css';
+
+body {
+  height: 100vh;
+  width: 100vw;
+}
