--- a/packages/core/src/components/blind/blind.scss
+++ b/packages/core/src/components/blind/blind.scss
@@ -16,7 +16,8 @@
   display: flex;
   flex-direction: column;
   background-color: var(--theme-blind-base--background);
-  border: solid var(--theme-blind--border-thickness) var(--theme-blind-base--border-color);
+  border: solid var(--theme-blind--border-thickness)
+    var(--theme-blind-base--border-color);
   border-radius: var(--theme-blind--border-radius);
   overflow: hidden;
 
@@ -28,7 +29,8 @@
     min-height: 3rem;
     height: 3rem;
     border: solid var(--theme-blind--border-thickness) transparent;
-    border-radius: var(--theme-blind--border-radius) var(--theme-blind--border-radius) 0 0;
+    border-radius: var(--theme-blind--border-radius)
+      var(--theme-blind--border-radius) 0 0;
     padding-right: $default-space;
     transition: border-radius $default-time;
     cursor: pointer;
