--- a/packages/core/scss/components/_buttons.scss
+++ b/packages/core/scss/components/_buttons.scss
@@ -37,10 +37,7 @@
   }
 }
 
-$button-categories: (
-  primary,
-  secondary
-);
+$button-categories: (primary, secondary);
 
 @mixin btn($name, $enable-border: true) {
   .btn-#{$name} {
@@ -81,7 +78,6 @@ $button-categories: (
     }
 
     &.selected {
-
       &.hover,
       &:hover {
         background-color: var(--theme-btn-#{$name}--background--selected-hover);
@@ -91,21 +87,26 @@ $button-categories: (
 
     &:not(:disabled):not(.disabled):active,
     &:not(:disabled):not(.disabled).active,
-    .show>&.dropdown-toggle {
+    .show > &.dropdown-toggle {
       @if $enable-border {
-        border-color: var(--theme-btn-#{$name}--border-color--active) !important;
+        border-color: var(
+          --theme-btn-#{$name}--border-color--active
+        ) !important;
       }
 
-      background-color: var(--theme-btn-#{$name}--background--active) !important;
+      background-color: var(
+        --theme-btn-#{$name}--background--active
+      ) !important;
       color: var(--theme-btn-#{$name}--color--active) !important;
     }
 
     &.selected {
-
       &:not(:disabled):not(.disabled):active,
       &:not(:disabled):not(.disabled).active,
-      .show>&.dropdown-toggle {
-        background-color: var(--theme-btn-#{$name}--background--selected-active);
+      .show > &.dropdown-toggle {
+        background-color: var(
+          --theme-btn-#{$name}--background--selected-active
+        );
         color: var(--theme-btn-#{$name}--color--selected-active);
       }
     }
