--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -17,8 +17,8 @@
     opacity: 0;
   }
 
-  [type='radio']:not(:checked)+label,
-  [type='radio']:checked+label {
+  [type='radio']:not(:checked) + label,
+  [type='radio']:checked + label {
     position: relative;
     line-height: $size;
     user-select: none;
@@ -27,11 +27,11 @@
     margin-right: $default-space;
   }
 
-  [type='radio']:not(:disabled)+label {
+  [type='radio']:not(:disabled) + label {
     cursor: pointer;
   }
 
-  [type='radio']+label:before {
+  [type='radio'] + label:before {
     content: '';
     width: $size;
     height: $size;
@@ -45,14 +45,14 @@
     border-radius: 100%;
   }
 
-  [type='radio']+label:focus-visible {
+  [type='radio'] + label:focus-visible {
     &:before {
       outline: 1px solid var(--focus--border-color);
       outline-offset: var(--theme-radiobtn--focus--outline-offset);
     }
   }
 
-  [type='radio']:focus-visible+label {
+  [type='radio']:focus-visible + label {
     &:before {
       outline: 1px solid var(--focus--border-color);
       outline-offset: var(--theme-radiobtn--focus--outline-offset);
@@ -60,34 +60,39 @@
   }
 
   [type='radio']:not(:checked) {
-    &+label:before {
+    & + label:before {
       background-color: var(--theme-radiobtn-unchecked--background);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-unchecked--border-color);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-unchecked--border-color);
     }
 
-    &:hover+label:before {
+    &:hover + label:before {
       background-color: var(--theme-radiobtn-unchecked--background--hover);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-unchecked--border-color--hover);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-unchecked--border-color--hover);
     }
 
-    &:active+label:before {
+    &:active + label:before {
       background-color: var(--theme-radiobtn-unchecked--background--active);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-unchecked--border-color--active);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-unchecked--border-color--active);
     }
 
-    &:disabled+label::before {
+    &:disabled + label::before {
       background-color: var(--theme-radiobtn-unchecked--background--disabled);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-unchecked--border-color--disabled);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-unchecked--border-color--disabled);
     }
   }
 
   [type='radio']:checked {
-    &+label:before {
+    & + label:before {
       background-color: var(--theme-radiobtn-checked--background);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-checked--border-color);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-checked--border-color);
     }
 
-    &+label:after {
+    & + label:after {
       content: '';
       width: 10px;
       height: 10px;
@@ -100,33 +105,36 @@
       left: 7px;
     }
 
-    &:hover+label:before {
+    &:hover + label:before {
       background-color: var(--theme-radiobtn-checked--background--hover);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-checked--border-color--hover);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-checked--border-color--hover);
     }
 
-    &:active+label:before {
+    &:active + label:before {
       background-color: var(--theme-radiobtn-checked--background--active);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-checked--border-color--active);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-checked--border-color--active);
     }
 
-    &:disabled+label:before {
+    &:disabled + label:before {
       background-color: var(--theme-radiobtn-checked--background--disabled);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-checked--border-color--disabled);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-checked--border-color--disabled);
     }
 
-    &:disabled+label::after {
+    &:disabled + label::after {
       border-color: var(--theme-radiobtn-checked--color--disabled);
     }
   }
 
-  [type='radio']:disabled+label:before {
+  [type='radio']:disabled + label:before {
     pointer-events: none;
     opacity: 0.5;
   }
 
   [type='radio']:indeterminate {
-    &+label:after {
+    & + label:after {
       content: '';
       position: relative;
       display: block;
@@ -136,32 +144,36 @@
       transform: translateX(5px) translateY(-0.8rem);
     }
 
-    &+label:before {
+    & + label:before {
       background-color: var(--theme-radiobtn-mixed--background);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-mixed--border-color);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-mixed--border-color);
     }
 
-    &:hover+label:before {
+    &:hover + label:before {
       background-color: var(--theme-radiobtn-mixed--background--hover);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-mixed--border-color--hover);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-mixed--border-color--hover);
     }
 
-    &:active+label:before {
+    &:active + label:before {
       background-color: var(--theme-radiobtn-mixed--background--active);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-mixed--border-color--active);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-mixed--border-color--active);
     }
 
-    &:disabled+label::before {
+    &:disabled + label::before {
       background-color: var(--theme-radiobtn-mixed--background--disabled);
-      border: var(--theme-radiobtn--border-thickness) solid var(--theme-radiobtn-mixed--border-color--disabled);
+      border: var(--theme-radiobtn--border-thickness) solid
+        var(--theme-radiobtn-mixed--border-color--disabled);
     }
 
-    &:disabled+label::after {
+    &:disabled + label::after {
       border-color: var(--theme-radiobtn-mixed--color--disabled);
     }
   }
 
-  [type='radio']:disabled+label {
+  [type='radio']:disabled + label {
     color: var(--theme-radiobtn-label--color--disabled);
   }
 }
