--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -261,3 +261,13 @@ a.menu__link {
   display: table !important;
   width: 100%;
 }
+
+.navbar__brand {
+  padding-left: 4.875rem;
+}
+
+@media (max-width: 997px) {
+  .navbar__brand {
+    padding-left: 1rem;
+  }
+}
