--- a/packages/documentation/src/theme/Navbar/Content/styles.module.css
+++ b/packages/documentation/src/theme/Navbar/Content/styles.module.css
@@ -15,3 +15,13 @@ Hide color mode toggle in small viewports
     display: none;
   }
 }
+
+.Logo__Padding {
+  padding-left: 4.875rem;
+}
+
+@media (max-width: 997px) {
+  .Logo__Padding {
+    padding-left: 1rem;
+  }
+}
