--- a/packages/core/src/components/date-picker/test/range/index.html
+++ b/packages/core/src/components/date-picker/test/range/index.html
@@ -23,8 +23,9 @@ SPDX-License-Identifier: MIT
       "
     >
       <ix-date-picker
-        range="false"
-        from="1990/03/29"
+        range
+        from="1990/03/10"
+        to="1990/03/29"
         min-date="1990/03/05"
         max-date="1990/03/30"
       ></ix-date-picker>
