--- a/packages/core/src/components/time-picker/test/basic/index.html
+++ b/packages/core/src/components/time-picker/test/basic/index.html
@@ -22,7 +22,7 @@ SPDX-License-Identifier: MIT
         margin-top: 2rem;
       "
     >
-      <ix-time-picker></ix-time-picker>
+      <ix-time-picker time="10:11:12"></ix-time-picker>
     </div>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
