--- a/packages/core/src/components/map-navigation-overlay/test/basic/index.html
+++ b/packages/core/src/components/map-navigation-overlay/test/basic/index.html
@@ -14,9 +14,11 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-map-navigation-overlay name="Title" icon="bulb">
-      Lorem ipsum
-    </ix-map-navigation-overlay>
+    <ix-map-navigation>
+      <ix-map-navigation-overlay name="Title" icon="bulb" color="color-info">
+        Lorem ipsum
+      </ix-map-navigation-overlay>
+    </ix-map-navigation>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
 </html>
