--- a/packages/core/scss/components/_dropdown.scss
+++ b/packages/core/scss/components/_dropdown.scss
@@ -60,6 +60,9 @@
 }
 
 .dropdown-menu {
+  max-height: 50vh;
+  overflow-y: auto;
+
   background-color: var(--theme-menu--background);
   @include text-default-single;
   border: var(--theme-menu--border-thickness) solid
