fix(core/breadcrumb): update styling

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -130,7 +130,7 @@
     }
 
     .crumb-text + .glyph-chevron-right-small {
-      margin-inline-start: $small-space;
+      margin-inline-start: $tiny-space;
       margin-inline-end: 0; // Overwrite global selector: .btn .glyph
     }
 
