--- a/packages/core/src/components/validation-tooltip/validation-tooltip.scss
+++ b/packages/core/src/components/validation-tooltip/validation-tooltip.scss
@@ -11,7 +11,8 @@
 @import 'fonts';
 
 :host {
-  display: block;
+  display: inline-block;
+  position: relative;
   $padding: 5px;
 
   .validation-tooltip {
@@ -21,7 +22,8 @@
     border-radius: 4px;
     font-size: 13px;
     border: 1px solid var(--theme-tooltip--border-color);
-    box-shadow: 0 0 2px 0 rgba(0, 0, 40, 0.1), 0 4px 8px 0 rgba(0, 0, 40, 0.1), 0 12px 18px 0 rgba(0, 0, 40, 0.1);
+    box-shadow: 0 0 2px 0 rgba(0, 0, 40, 0.1), 0 4px 8px 0 rgba(0, 0, 40, 0.1),
+      0 12px 18px 0 rgba(0, 0, 40, 0.1);
 
     #arrow,
     #arrow::before {
@@ -43,38 +45,11 @@
     }
   }
 
-  .validation-tooltip[data-popper-placement^='top']>#arrow {
+  .validation-tooltip > #arrow {
     bottom: -5px;
 
     &::before {
       border-right: 1px solid var(--theme-tooltip--border-color);
-      border-bottom: 1px solid var(--theme-tooltip--border-color);
-    }
-  }
-
-  .validation-tooltip[data-popper-placement^='bottom']>#arrow {
-    top: -5px;
-
-    &::before {
-      border-left: 1px solid var(--theme-tooltip--border-color);
-      border-top: 1px solid var(--theme-tooltip--border-color);
-    }
-  }
-
-  .validation-tooltip[data-popper-placement^='left']>#arrow {
-    right: -5px;
-
-    &::before {
-      border-right: 1px solid var(--theme-tooltip--border-color);
-      border-top: 1px solid var(--theme-tooltip--border-color);
-    }
-  }
-
-  .validation-tooltip[data-popper-placement^='right']>#arrow {
-    left: -5px;
-
-    &::before {
-      border-left: 1px solid var(--theme-tooltip--border-color);
       border-bottom: 1px solid var(--theme-tooltip--border-color);
     }
   }
