--- a/packages/documentation/src/css/api-table.css
+++ b/packages/documentation/src/css/api-table.css
@@ -17,9 +17,23 @@
 }
 
 .Api__Table .Docs__Tag {
+  display: inline-block;
+  position: relative;
+  width: auto;
+  max-width: 25vw;
+
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  cursor: default;
   font-size: 12px;
   background-color: var(--theme-color-primary);
   border-radius: 2px;
   padding: 0.15rem 0.25rem;
   margin-right: 0.15rem;
+}
+
+.Api__Table .Docs__Tag.Docs__Tag__Deprecated {
+  background-color: var(--theme-color-alarm);
 }
