--- a/packages/core/src/components/checkbox/test/basic/index.html
+++ b/packages/core/src/components/checkbox/test/basic/index.html
@@ -15,6 +15,16 @@ SPDX-License-Identifier: MIT
   </head>
   <body>
     <div style="margin-bottom: 1rem">
+      <input type="checkbox" id="checkbox_01" checked />
+      <label for="checkbox_01">Simple checkbox</label>
+    </div>
+
+    <div style="margin-bottom: 1rem">
+      <input type="checkbox" id="checkbox_02" checked disabled />
+      <label for="checkbox_02">Disabled checkbox</label>
+    </div>
+
+    <div style="margin-bottom: 1rem">
       <input type="checkbox" id="checkbox_01" />
       <label for="checkbox_01">Simple checkbox</label>
     </div>
