fix(core/radio-button): prevent input tag from blocking mouse events

--- a/packages/core/scss/components/_radiobuttons.scss
+++ b/packages/core/scss/components/_radiobuttons.scss
@@ -14,7 +14,7 @@
   [type='radio']:not(:checked),
   [type='radio']:checked {
     position: absolute;
-    opacity: 0;
+    display: none;
   }
 
   [type='radio']:not(:checked) + label,
